[package]
name = "memfs"
version = "0.1.0"
edition = "2024"

[features]
check-loom = ["loom"]

[dependencies]
bitflags = "2.9.0"
rand = "0.9.0"
loom = {version = "0.7", optional = true}

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
debug = true
strip = false
opt-level = 0