[package]
name = "memfs"
version = "0.1.0"
edition = "2024"

[features]
coarse-grained = []
fine-grained = []
lock-free = []

[dependencies]
bitflags = "2.9.0"
rand = "0.9.0"
dashmap = "6.1.0"
crossbeam = "0.8.4"
papaya = "0.2.1"

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
debug = true
strip = false
opt-level = 0